--- a/style.css
+++ b/style.css
@@ -17,7 +17,15 @@ html,
 body {
     /* Sets default font-size to 16px, ensuring 1em = 16px; */
     font-size: 16px;
-    font-family: 'Oxygen', sans-serif;
+    font-family: 'Roboto', sans-serif;
+}
+
+h1, h3 {
+    font-family: 'EB Garamond', serif;
+}
+
+.party {
+    text-align: right;
 }
 
 .container {
